infra/kubernetes/stg/service-user-api.yaml
apiVersion: v1
kind: Service

metadata:
  name: user-api
  namespace: presto-pay

spec:
  selector:
    app: user-api

  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
